--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "05-orchestration/rag-project"]
 	path = 05-orchestration/rag-project
-	url = ./05-orchestration/rag-project
+	url = git@github.com:SofyaLL/rag-project.git
